--- a/src/pages/main/Main.css
+++ b/src/pages/main/Main.css
@@ -3,13 +3,14 @@
     flex-direction: column;   
     min-height: 100vh;
     position: relative;     
+    min-width: 100%;
   }
   
-  header {
+  .header {
     padding-left: 50px;
     display: flex;
     height: 20%;
-    width: 100%;    
+    width: 98%;    
     background-color: rgb(145, 125, 159);  
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-bottom: solid 8px lightgray;
@@ -18,7 +19,7 @@
   h1{
     display: flex;
     align-items: center;
-    width: 50%;
+    width: 40%;
     padding: 20px;
     color: white;
     font-size: 60px;      
@@ -26,14 +27,13 @@
   
   .main{      
     height: 75%;  
-    padding-bottom: 2.5rem;    
+    padding-bottom: 2.5rem;        
   }
 
   .footer {      
     position: abosulte;
     bottom:0;
-    height: 2.5rem;            
-
+    height: 2.5rem;       
   }
 
     @media only screen and (max-width: 1263px) {
